Add further routes

--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -7,9 +7,9 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li>
-            <a >All Tournaments</a>
+            <a [routerLink]="['/tournaments']">All Tournaments</a>
           </li>
-          <li><a href="">Create Tournament</a></li>
+          <li><a [routerLink]="['/tournaments/new']">Create Tournament</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
               Tournaments
