--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -7,9 +7,9 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li>
-            <a [routerLink]="['/tournaments']">All Tournaments</a>
+            <a [routerLink]="['/tournaments']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All Tournaments</a>
           </li>
-          <li><a [routerLink]="['/tournaments/new']">Create Tournament</a></li>
+          <li><a [routerLink]="['/tournaments/new']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Create Tournament</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
               Tournaments
@@ -25,7 +25,7 @@
         <div class="navbar-header navbar-right">
           <ul class="nav navbar-nav">
             <li>
-              <a>Welcome John</a>
+              <a [routerLink]="['golfer/profile']">Welcome John</a>
             </li>
           </ul>
         </div>
